--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity
             android:name=".EnterNameActivity"
             android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".EditTransactionActivity" />
     </application>
 
 </manifest>
